--- a/Artykuly/portfolio.html
+++ b/Artykuly/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poczytaj</title>
     <link rel="stylesheet" media="(max-width: 500px)"  href="css/style.min.css">
+    <link rel="stylesheet" media="(max-width: 500px)" href="../main-css/main-mobile.min.css">
     <link rel="stylesheet" media="(min-width: 500px)" href="css/web.min.css">
     <link rel="stylesheet" media="(min-width: 500px)" href="../main-css/main-web.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -26,15 +27,6 @@
 
     <div class="bar">
         <a href="../Start/index.html" class="logo"></a>
-        <!-- <div id="menu" class="menu"></div>
-        <div id="open" class="menu_open">
-
-          <h1 class="small menu_text"> lewacka propaganda </h1>
-          <h1 class="small menu_text"> prawicowa propaganda </h1>
-          <h1 class="small menu_text"> centrum </h1>
-          <h1 class="small menu_text"> i dowiedz sie glupotek </h1>
-
-        </div> -->
     </div>
 
 
@@ -50,7 +42,7 @@
     <div class="text">
 
     <!-- tittle -->
-    <h1 id="headline" class="big">Pierwsze <br> Portfolio</h1>
+    <h1 id="headline" class="big">Pierwsze Portfolio</h1>
     <!-- title end -->
 
     <p class="date">10.06.2020</p>
