--- a/Artykuly/instagram.html
+++ b/Artykuly/instagram.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poczytaj</title>
     <link rel="stylesheet" media="(max-width: 500px)"  href="css/style.min.css">
+    <link rel="stylesheet" media="(max-width: 500px)" href="../main-css/main-mobile.min.css">
     <link rel="stylesheet" media="(min-width: 500px)" href="css/web.min.css">
+    <link rel="stylesheet" media="(min-width: 500px)" href="../main-css/main-web.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
@@ -15,15 +17,6 @@
 
     <div class="bar">
         <a href="../Start/index.html" class="logo"></a>
-        <!-- <div id="menu" class="menu"></div>
-        <div id="open" class="menu_open">
-
-          <h1 class="small menu_text"> lewacka propaganda </h1>
-          <h1 class="small menu_text"> prawicowa propaganda </h1>
-          <h1 class="small menu_text"> centrum </h1>
-          <h1 class="small menu_text"> i dowiedz sie glupotek </h1>
-
-        </div> -->
     </div>
 
 
