--- a/Artykuly/autoportret.html
+++ b/Artykuly/autoportret.html
@@ -71,10 +71,10 @@
 
     <h3>Wstęp</h3>
     <p class="small">
-      Pierwszy ze sposobów, zrealizowałem niedawno.
+      Taki projekt zrealizowałem niedawno.
       Zaprojektowałem niewielką identyfikację wizualną
-      dla kawiarni którą nazwałem "Dobra Kawa".
-      Przeprowadzę Was przez proces tworzenia
+      dla kawiarni, którą nazwałem "Dobra Kawa".
+      Przeprowadzę Was przez proces tworzenia:
       od wymyślenia nazwy po layout strony internetowej.
       <br>
       Czy są jakieś efekty? Narazie nie jestem w stanie stwierdzić.
@@ -82,31 +82,6 @@
       Najlepiej w postaci zlecenia, ale nie byłbym taki optymistyczny.
       Nowy obserwator na instragramie, czy nowe umiejętności
       to też sowita zapłata.
-    </p>
-
-    <h3>Współpraca z ogranizacjami non-profit</h3>
-    <p class="small">
-      Zanim samodzielnie zaczniemy tworzyć markę od podstaw,
-      zastanówmy się czy jakaś znajoma organizacja non-profit,
-      nie potrzebuje wsparcia graficznego. <br>
-      W moim przypadku, zacząłem pomagać Młodzieżowemu
-      Strajkowi Klimatycznemu w moim mieście. Miałem dużą swobodę pracy,
-      co pozwoliło mi stworzyć kilka ciekawych projektów. Oprócz tego nawiązłem nowe znajomości
-      i poznałem moją dziewczynę.
-      <br>
-      Co jest dobrego w takim wolontariacie? <br>
-      Na pewno zalążki pracy na rzeczywistym rynku,
-      wartościowy feedback. Tutaj nie polecałbym szukać opinii na
-      grupach facebookowych, on raczej nie jest wartościowy.
-      Możemy też nauczyć się pracy w grupe, i przyhamowania
-      naszego graficznego ego. Swoboda i przyjemność pracy powinna być
-      zadowalająca. <br>
-      Na co lepiej uważać? <br>
-      Istnieje spore ryzyko, że z współpracy nie
-      wyniknie za dużo, organizacja po czasie może nie być już
-      tak zainteresowana waszymi działaniami, jak na początku, a na
-      koniec się dowiecie, że zatrudnili profesjonalnego grafika.
-      Pamiętajcie, nie dajcie się wykorzystać.
     </p>
 
     <h3>Zaczynamy tworzyć markę.</h3>
@@ -119,55 +94,129 @@
       zobaczy takie portfolio, z pewnością zwróci uwagę na projekt dotyczący jego branży.
 
       <br><br>
-      2. Nazwa
+      2. Nazwa <br>
       Mamy już zarys dla kogo pracujemy, teraz czas na szkicową
-      nazwę. W mojej nazwie bezprecedensu do słowa kawa, dodałem dobra. Na początku dobrze
-      postawić na coś prostego, żeby nie tracić na to dużo czasu
-      nazwę zawszę można zmienić, a w tym ćwiczeniu chodzi też o złapanie kreatywnego wiatru.
-
-      3. Logo
+      nazwę. W mojej nazwie do słowa "Kawa", po prostu dodałem "Dobra", czyli "Dobra Kawa".
+      Na początku dobrze postawić na coś prostego, żeby nie tracić na to dużo
+      czasu - nazwę zawsze można zmienić, a w tym ćwiczeniu chodzi też o złapanie kreatywnego wiatru.
+      <br><br>
+      3. Logo i kolorystyka <br>
       Następnym krokiem jaki podjąłem było kombinowanie z logo.
-      Na tym etpaie zaczyna się już frajda z projektowania.
+      Na tym etapie zaczyna się frajda z projektowania.
       </p>
       <img src="img/5.jpg" class="picture picture_in">
       <p class="small">
-      żeby nie wpaść w wir poprawiania i miliona pomysłów, w razie problemów
-      warto ustalić sobie czas. U mnie to raczej działo się szybko, w ciągu
-      jednego dnia zrobiłem logo, plakat, ilustracje.
+      Wyżej moje początkowe szkice, dość szybko wybrałem finalną wersję.
+      Polecam Wam poszkicować trochę dłużej i więcej, ale nie za długo.
+      Jeśli jesteście perfekcjonistami, ustawicie sobie limit na jeden lub dwa dni.
+      Nie zapominajmy, że to tylko ćwiczenie. <br>
+      Podczas szkicowania logo, warto już układać sobie w głowie,
+      jakie doświadczenia będzie dawać identyfikacja.
+      Postanowiłem, że emocje jakie ma wyrażać mój projekt to ciepło kawiarni
+      i ludzi, z którymi spędzami czas. Chciałem stworzyć przyjazną otoczkę
+      zapewniającą pewnego rodzaju bezpieczeństwo. Równocześnie z poczuciem
+      klimatu, pojawiła mi się w głowie kolorystyka. Mierzyłem w brązy i beże,
+      ostatecznie wybrałem barwę kremową, mglistą musztardę i kontrastującą czerwień.
+      Paleta barw poniżej.
+      </p>
+      <img src="img/7.jpg" class="picture picture_in">
+      <p class="small">
+      W logo postawiłem na prosty, liniowy symbol.
+      Logo jest obrysem kubka i dłoni, ułożonej w gest “okej”.
+      Stosowanie gestów w symbolach nie jest bezpiecznym zagraniem, a szczególnie w projektach
+      międzynarodowych. Ale w mojej niedużej kawiarni nie wywoła to negatywnych reakcji,
+      z racji na demografię.
+      </p>
+      <img src="img/6.jpg" class="picture picture_in" alt="">
+      <p class="small">
+      Pierwszy projekt.
+      Najpierw zwektoryzowałem logo z wypełnieniem, żeby lepiej złapać kształ.
+      Dwa elementy tworzące logo odzieliłem kolorami, dla dostrzeżenia kontrastu
+      i sprawdzenia czy kompozycyjnie jest w porządku. Przy projektowaniu symbolu,
+      dbam o to by dobrze wpisywał się w kwadrat, a już najlepiej gdyby był kwadratowy.
+      Optyka jest równie ważna co matematyka, dlatego nie bazuje na ściśle określonych
+      zasadach. Po ustaleniu kompozycji, zaminiłem kształty w zaoblony obrys i przy tym
+      stylu zostałem do końca. Od tego momentu, zaczyna się wielkie dłubanie przy moim
+      symbolu. Nic ciekawego wam tu nie pokaże, po prostu przesuwanie krzywych, trochę na wyczucie,
+      a trochę pomagałem sobie kształtami.
+      </p>
+      <img src="img/8.jpg" class="picture picture_in" alt="">
+      <p class="small">
+      Na pierwszy rzut oka nic się nie zmieniło.
+      No i zmienić się nie miało, symbol potrzebował dopieszczenia.
+      Zmodyfikowałem krzywe w bardziej delikatne linie.
+      Dopracowałem koło utworzone z palców. Uciąłem uszko, które
+      poszerzało logo. I na koniec pogrubiłem obrys. Do całości dobrałem
+      szeryfowy font - averia sans libre. Wybrałem taki krój
+      przez rozlewające się litery, które kojarzą się z odbitym kubkiem kawy na stole.
+      Styl fontu to Regular, pasował najlepiej do obrysu logo.
+      Symbol skaluje się prawidłowo.
+      </p>
+      <img src="img/9.jpg"  class="picture picture_in" alt="">
+      <p class="small">
+      Na koniec z logo zrobiłem z niego animacje.
+      Tworzenie animacji na symbol dodaje trochę większego spojrzenia
+      na prace, mogę stwierdzić, że bardziej zrozumiałem moje logo.
+      Efekt możecie zobaczyć na moim instagramie.
+      <a href="https://www.instagram.com/lukaszbiernacki_/">link</a>
+      </p>
 
-      Podczas szkicowania logo, warto już układać w głowie,
-      jakie doświadczenia będzie dawać nam cała identyfikacja.
-      W moim logo postawiłem na dość prosty, nowoczesny symbol.
-      Symbol jest obrysem kubka i dłoni, ułożonej w gest “okej”,
-      na gesty w logo trzeba uważać, a szczególnie w projektach
-      międzynarodowych. Ale u mojej wymyślonej kawiarenki w jakimś
-      polskim mieście, założyłem, że to nie duży problem.
+      <h3>Ilustracje, plakaty i inne</h3>
+
+      <p class="small">
+      Kiedy miałem już mniej więcej dopracowane logo, zacząłem pracować
+      nad ilustracjami. W czasie projektowania ważne jest, żeby nie pracować w ciągu nad
+      jednym elementem, ale łapać oddech w innych elementach.
+      Projektowanie ilustracji, doprowadziło mnie do ostatecznej kolorystyki.
+      </p>
+
+      <img src="img/10.jpg" class="picture picture_in" alt="">
+      <p class="small">
+      Zacząłem od samej postaci, ale grafika wydawała mi się zbyt pusta,
+      dlatego dodałem przedmioty kojarzące się z kawiarnią.
+      W górnej części dodałem logo i tekst, przedzielone kreską.
+      Po zaprojektowaniu pierwszej ilustracji, pojawiły się u mnie duże pokłady
+      kreatywności, i od razu narysowałem drugą ilustrację, a co ważniejsze
+      miałem już kompletny pomysł na całość identyfikacji.
+      </p>
+
+      <img src="img/11.jpg" class="picture picture_in" alt="">
+      <img src="img/12.jpg" class="picture picture_in" alt="">
+
+      <p class="small">
+      Uznałem, że dwie ilustracje wystarczą, a następnym zaprojektowany elementem był plakat.
+      Treściowo również postawiłem na prostotę. Obrałem sobie za cel stworzenie plakatu
+      na wydarzenie muzyczne. Stylistykę już mam, dlatego narysowałem dwa instrumenty muzyczne,
+      lampy które jeszcze się przewiną w innym elemencie. Zauważyłem, że
+      warto stosować bardzo podobne, albo te same elementy na kilku pracach. Tworzy się wtedy
+      spójna całość, i patrząc na plakat, wizytówkę czujemy jakbyśmy byli w tym samym miejscu.
+      Gdyby moje zlecenie było prawdziwe zastosowałbym lampy z rzeczywistego wystroju
+      kawiarni. Takie zagranie może budzić emocje w odbiorcach. Plakat wygląda następująco.
+      </p>
+
+      <img src="img/13.jpg" class="picture picture_in" alt="">
+
+      <p class="small">
+      Przed ostatnim elementem jest menu. Z menu jestem zadowolny,
+      można powiedzieć, że wykazałem się kreatywnością. Menu przedzieliłem na dwie części
+      z lewej strony jest wmiare tradycyjne menu, jedynie ceny są z drugiej strony niż zazwyczaj
+      w tego typu projektach. Kolor kartki, to rozjaśniony kremowy z palety barw, orginalny
+      był za ciężki. Z prawej strony chciałem uzyskać efekt kelnera podającego menu,
+      a w tle odsłonić trochę życia kawiarni. Przygotowałem jeszcze menu online zaprojektowane w kwadracie,
+      w którym widać jeszcze więcej aktywności.
+
+      </p>
+      <img src="img/14.jpg" class="picture picture_in" alt="">
+      <p class="small">
+      Ostatnim elementem jest dodatek pandemiczny.
+      Jest to prosta kartka z prostą ilustracją
+      dezynfekującej postaci.
+      </p>
+      <img src="img/15.jpg" class="picture picture_in" alt="">
 
 
 
-    </p>
 
-    <p class="small margin_2">
-    </p>
-
-    <p class="small margin_2">
-    </p>
-
-
-    <h2>Czyli mam już jakieś doświadczenie, ale jak je zdobyć</h2>
-    <p class="small">
-
-    </p>
-
-    <h2>Kiedy i gdzie założyć portfolio</h2>
-    <p class="small">
-
-    </p>
-
-    <h2>Co dalej?</h2>
-    <p class="small">
-
-    </p>
 
     <a href="https://broccoli70.github.io/portfolio/"><h2>Portfolio (Kliknij)</h2></a>
     </div>
